--- a/cmdoptions/CMakeLists.txt
+++ b/cmdoptions/CMakeLists.txt
@@ -1,8 +1,8 @@
 set(cmdoptionssrc detail/CommmandOptions.cpp)
-add_library(cmdoptions ${cmdoptionssrc})
+add_library(util_cmdoptions ${cmdoptionssrc})
 
-target_include_directories(cmdoptions PUBLIC ${Boost_INCLUDE_DIR})
-target_link_libraries(cmdoptions PUBLIC ${Boost_LIBRARIES})
+target_include_directories(util_cmdoptions PUBLIC ${Boost_INCLUDE_DIR})
+target_link_libraries(util_cmdoptions PUBLIC ${Boost_LIBRARIES})
 
 if(test)
   add_subdirectory(unittest)
