--- a/cmdoptions/unittest/CMakeLists.txt
+++ b/cmdoptions/unittest/CMakeLists.txt
@@ -4,6 +4,6 @@ set(unittestSrc
 
 add_executable(unittestCmdoptions ${unittestSrc})
 target_include_directories(unittestCmdoptions PRIVATE ${GTEST_INCLUDE_DIRS})
-target_link_libraries(unittestCmdoptions cmdoptions ${GTEST_LIBRARIES})
+target_link_libraries(unittestCmdoptions util_cmdoptions ${GTEST_LIBRARIES})
 
 add_test(unittestCmdoptions unittestCmdoptions)
